@@ -15,6 +15,10 @@ Features
 
 - Speed up ``repoze.bfg.traversal.traverse`` slightly.
 
+- Speed up ``repoze.bfg.url.model_url`` slightly.
+
+- Speed up ``repoze.bfg.url.route_url`` slightly.
+
 Internal
 --------
 
